backup/scope/k8s/deploy.yaml
# borrowed from https://cloud.weave.works/k8s/scope.yaml?k8s-version=1.9.3
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weave-scope-app
  labels:
    name: weave-scope-app
    app: weave-scope
    weave-cloud-component: scope
    weave-scope-component: app
  namespace: weave
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weave-scope
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        name: weave-scope-app
        app: weave-scope
        weave-cloud-component: scope
        weave-scope-component: app
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: kubernetes.io/os
                  operator: In
                  values:
                    - linux
                - key: kubernetes.io/arch
                  operator: In
                  values:
                    - arm64
      containers:
        - name: app
          args:
            - '--no-probe'
          env: []
          # image: weaveworks/scope:1.10.2
          image: carlosedp/scope:v1.10.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4040
              protocol: TCP
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
