backup/scope/k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weave-scope-app
  namespace: weave
spec:
  ingressClassName: nginx
  rules:
  - host: weave.bookserver.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: weave-scope-app
            port:
              number: 4040
